--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>Wordle PPY</h1>
+     <input type="text" id="guess-input">
+     <button id="guess-button">Intentar</button>
+     <div id="grid"></div>
+     <p id="guesses">
 </body>
 </html>
