--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wordle PPY</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Wordle PPY</h1>
-     <input type="text" id="guess-input">
-     <button id="guess-button">Intentar</button>
-     <div id="grid"></div>
-     <p id="guesses">
-</body>
+    <div id="grid"></div>
+    <input type="text" id="guess-input" />
+    <button id="guess-button">Intentar</button>
+
+    <p id="guesses"></p>
+  </body>
 </html>
