--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Wordle PPY</h1>
     <div id="grid"></div>
-    <input type="text" id="guess-input" />
+    <input type="text" id="guess-input" maxlength="5" placeholder="..."/>
     <button id="guess-button">Intentar</button>
 
   </body>
